corrected same spelling error in 5 .properties files
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@736 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/benchmarks-qdpt/config/basicblock.properties
+++ b/test/benchmarks-qdpt/config/basicblock.properties
@@ -25,7 +25,7 @@ cfa.check = true
 
 # do we want to combine multiple assignments and 
 # if cpa.simplify is set to true and cfa.combineBlockStatements is set
-# to false only blank edges will be removed while simplfying
+# to false only blank edges will be removed while simplifying
 
 cfa.combineBlockStatements = false
 
