Fixed configuration files to use the new field analysis.traversal. Fixed typo in CPAConfiguration.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@743 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/explicit.properties
+++ b/test/config/explicit.properties
@@ -41,9 +41,8 @@ cfa.removeIrrelevantForErrorLocations = true
 # entry function
 analysis.entryFunction = main
     
-# which strategy to adopt for visiting states? DFS or BFS? BFS, unless
-# bfs is false
-analysis.bfs = false
+# which strategy to adopt for visiting states? dfs, bfs, or topsort
+analysis.traversal = dfs
 
 # which CPAs do we want to use? where is the CPA class that represents the corresponding analysis?
 analysis.cpas = cpa.symbpredabs.explicit.ExplicitCPA
