--- a/test/config/explicitAnalysisInf.properties
+++ b/test/config/explicitAnalysisInf.properties
@@ -29,10 +29,8 @@ analysis.noCompositeCPA = false
 # entry function
 analysis.entryFunction = main
     
-# which strategy to adopt for visiting states? DFS or BFS? BFS, unless
-# bfs is false
-analysis.topSort = true
-analysis.bfs = false
+# which strategy to adopt for visiting states? dfs, bfs, or topsort
+analysis.traversal = topsort
 
 # which CPAs do we want to use? where is the CPA class that represents the corresponding analysis?
 analysis.cpas = cpa.location.LocationCPA, cpa.explicit.ExplicitAnalysisCPA
