--- a/test/config/predabst.properties
+++ b/test/config/predabst.properties
@@ -38,9 +38,8 @@ cfa.removeIrrelevantForErrorLocations = true
 # entry function
 analysis.entryFunction = main
     
-# which strategy to adopt for visiting states? DFS or BFS? BFS, unless
-# bfs is false
-analysis.bfs = false
+# which strategy to adopt for visiting states? dfs, bfs, or topsort
+analysis.traversal = dfs
 
 # where to keep the programs to run, this is the workspacedata if
 # you use eclipse to run CPAChecker. if it changes, you should change this
