--- a/test/config/symbpredabsCPA.properties
+++ b/test/config/symbpredabsCPA.properties
@@ -45,10 +45,8 @@ analysis.noCompositeCPA = true
 # entry function
 analysis.entryFunction = main
     
-# which strategy to adopt for visiting states? DFS or BFS? BFS, unless
-# bfs is false
-analysis.topSort = true
-analysis.bfs = false
+# which strategy to adopt for visiting states? dfs, bfs, or topsort
+analysis.traversal = topsort
 
 # where to keep the programs to run, this is the workspacedata if
 # you use eclipse to run CPAChecker. if it changes, you should change this
