--- a/test/config/uninitVars.properties
+++ b/test/config/uninitVars.properties
@@ -29,10 +29,8 @@ analysis.noCompositeCPA = false
 # entry function
 analysis.entryFunction = main
     
-# which strategy to adopt for visiting states? DFS or BFS? BFS, unless
-# bfs is false
-analysis.topSort = false
-analysis.bfs = false
+# which strategy to adopt for visiting states? dfs, bfs, or topsort
+analysis.traversal = dfs
 
 # where to keep the programs to run, this is the workspacedata if
 # you use eclipse to run CPAChecker. if it changes, you should change this
