In CompositeElement, moved check for ElementWithLocation from constructor to method getElementWithLocation(). Expanded the style guide. Expanded a comment in the configuration files.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@745 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/symbpredabsCPA.properties
+++ b/test/config/symbpredabsCPA.properties
@@ -54,6 +54,8 @@ analysis.traversal = topsort
 #analysis.programs = test/
 
 # which CPAs do we want to use? where is the CPA class that represents the corresponding analysis?
+# if additional location information is necessary, locationCPA must be the first given in the list
+# e.g. analysis.cpas = cpa.location.LocationCPA, ...
 analysis.cpas = cpa.location.LocationCPA, cpa.errorlocation.ErrorLocationCPA, cpa.symbpredabsCPA.SymbPredAbsCPA
 
 # what merge operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
