--- a/test/config/itpexplicit.properties
+++ b/test/config/itpexplicit.properties
@@ -36,6 +36,8 @@ analysis.entryFunction = main
 analysis.traversal = dfs
 
 # which CPAs do we want to use? where is the CPA class that represents the corresponding analysis?
+# if additional location information is necessary, locationCPA must be the first given in the list
+# e.g. analysis.cpas = cpa.location.LocationCPA, ...
 analysis.cpas = cpa.itpabs.explicit.ItpExplicitCPA
 
 # what merge operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
