--- a/test/config/uninitVars.properties
+++ b/test/config/uninitVars.properties
@@ -38,6 +38,8 @@ analysis.traversal = dfs
 #analysis.programs = tests/
 
 # which CPAs do we want to use? where is the CPA class that represents the corresponding analysis?
+# if additional location information is necessary, locationCPA must be the first given in the list
+# e.g. analysis.cpas = cpa.location.LocationCPA, ...
 analysis.cpas = cpa.location.LocationCPA, cpa.uninitvars.UninitializedVariablesCPA
 
 # what merge operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
