big change of RefinementManager -> Refiner, not longer part of CPA but has to be specified in config RefinableCPA is gone
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@749 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/predabst.properties
+++ b/test/config/predabst.properties
@@ -62,6 +62,9 @@ analysis.stopOperators = sep, sep
 # if true, don't print the set of reachable states at the end of the analysis
 analysis.dontPrintReachableStates = false
 
+# the class used for refinement
+cegar.refiner = cpa.predicateabstraction.PredicateAbstractionRefiner
+
 cpa.useSpecializedReachedSet = true
 
 #------------------------------------------------------------------------------
