--- a/test/config/symbpredabsCPA.properties
+++ b/test/config/symbpredabsCPA.properties
@@ -69,6 +69,9 @@ analysis.stopOperators = sep, sep, join
 # if true, don't print the set of reachable states at the end of the analysis
 analysis.dontPrintReachableStates = false
 
+# the class used for refinement
+cegar.refiner = cpa.symbpredabsCPA.SymbPredAbsRefiner
+
 # if true, perform a (very) simple "cone-of-influence" reduction, to get rid
 # of all the nodes and edges that are not reachable from the error locations
 cfa.removeIrrelevantForErrorLocations = true
