simplify Path class and its usage, reducing memory footprint and access time
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@764 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/symbpredabsCPA.properties
+++ b/test/config/symbpredabsCPA.properties
@@ -67,7 +67,7 @@ analysis.mergeOperators = sep, sep, join
 analysis.stopOperators = sep, sep, join
 
 # if true, don't print the set of reachable states at the end of the analysis
-analysis.dontPrintReachableStates = false
+analysis.dontPrintReachableStates = true
 
 # the class used for refinement
 cegar.refiner = cpa.symbpredabsCPA.SymbPredAbsRefiner
