Big redesign of logging - now all logging functionality is centered in the new LogManager in cpa.common. Changed all classes to use the LogManager. Adapted config files. Deleted the obsolete package logging.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@765 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/uninitVars.properties
+++ b/test/config/uninitVars.properties
@@ -1,11 +1,25 @@
 # where to save the log file
-log.path = test/CPALog.txt
+log.path = test/output/CPALog.txt
 
-# set the log level, only on, off supported currently to switch on or off
-log.level = off
+# set log level of cpa log file. lower log levels include all higher ones.
+# possibilities in descending order: 
+# OFF: 		no logs published
+# SEVERE: 	error messages
+# WARNING: 	warnings
+# INFO: 	messages
+# FINE: 	logs on main application level
+# FINER: 	logs on central CPA algorithm level
+# FINEST: 	logs published by specific CPAs
+# ALL: 		debugging information
+# Care must be taken with levels of FINER or lower, as output files may 
+# become quite large and memory usage might become an issue. 
+log.level = FINER
+
+# set log level of console output. levels lower than log.level are ignored
+log.consoleLevel = FINE
 
 # do we want to print cfa as .dot, true or false
-dot.export = true
+dot.export = false
 
 # where to save the dot file
 dot.path = test/output/
