--- a/test/config/predabst.properties
+++ b/test/config/predabst.properties
@@ -4,8 +4,22 @@ analysis.useRefinement = true
 # where to save the log file
 log.path = test/output/CPALog.txt
 
-# set the log level, only on, off supported currently to switch on or off
-log.level = off
+# set log level of cpa log file. lower log levels include all higher ones.
+# possibilities in descending order: 
+# OFF: 		no logs published
+# SEVERE: 	error messages
+# WARNING: 	warnings
+# INFO: 	messages
+# FINE: 	logs on main application level
+# FINER: 	logs on central CPA algorithm level
+# FINEST: 	logs published by specific CPAs
+# ALL: 		debugging information
+# Care must be taken with levels of FINER or lower, as output files may 
+# become quite large and memory usage might become an issue. 
+log.level = OFF
+
+# set log level of console output. levels lower than log.level are ignored
+log.consoleLevel = OFF
 
 # do we want to print cfa as .dot, true or false
 dot.export = true
