--- a/test/config/uninitVars.properties
+++ b/test/config/uninitVars.properties
@@ -13,10 +13,10 @@ log.path = test/output/CPALog.txt
 # ALL: 		debugging information
 # Care must be taken with levels of FINER or lower, as output files may 
 # become quite large and memory usage might become an issue. 
-log.level = FINER
+log.level = OFF
 
 # set log level of console output. levels lower than log.level are ignored
-log.consoleLevel = FINE
+log.consoleLevel = OFF
 
 # do we want to print cfa as .dot, true or false
 dot.export = false
