--- a/test/config/explicitAnalysisJoin.properties
+++ b/test/config/explicitAnalysisJoin.properties
@@ -49,22 +49,22 @@ analysis.traversal = topsort
 # which CPAs do we want to use? where is the CPA class that represents the corresponding analysis?
 # if additional location information is necessary, locationCPA must be the first given in the list
 # e.g. analysis.cpas = cpa.location.LocationCPA, ...
-analysis.cpas = cpa.location.LocationCPA, cpa.explicit.ExplicitAnalysisCPA
+analysis.cpas = cpa.location.LocationCPA, cpa.explicit.ExplicitAnalysisCPA, cpa.errorlocation.ErrorLocationCPA
 
 # what merge operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
 # use sep for MergeSep and join for MergeJoin
-analysis.mergeOperators = sep, join
+analysis.mergeOperators = sep, join, ignored
 
 # what stop operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
 # use sep for StopSep and join for StopJoin
-analysis.stopOperators = sep, sep
+analysis.stopOperators = sep, sep, ignored
 
 # if true, don't print the set of reachable states at the end of the analysis
 analysis.dontPrintReachableStates = true
 
 # if true, perform a (very) simple "cone-of-influence" reduction, to get rid
 # of all the nodes and edges that are not reachable from the error locations
-cfa.removeIrrelevantForErrorLocations = false
+cfa.removeIrrelevantForErrorLocations = true
 
 # use location mapped reached set
 cpa.useSpecializedReachedSet = true
