Added initialization tests for field references to uninitializedVariablesCPA. Changed the configuration file to also run typesCPA, which is needed for the handling of field references.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@789 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/uninitVars.properties
+++ b/test/config/uninitVars.properties
@@ -54,15 +54,15 @@ analysis.traversal = dfs
 # which CPAs do we want to use? where is the CPA class that represents the corresponding analysis?
 # if additional location information is necessary, locationCPA must be the first given in the list
 # e.g. analysis.cpas = cpa.location.LocationCPA, ...
-analysis.cpas = cpa.location.LocationCPA, cpa.uninitvars.UninitializedVariablesCPA
+analysis.cpas = cpa.location.LocationCPA, cpa.types.TypesCPA, cpa.uninitvars.UninitializedVariablesCPA
 
 # what merge operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
 # use sep for MergeSep and join for MergeJoin
-analysis.mergeOperators = sep, sep
+analysis.mergeOperators = sep, join, sep
 
 # what stop operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
 # use sep for StopSep and join for StopJoin
-analysis.stopOperators = sep, sep
+analysis.stopOperators = sep, sep, sep
 
 # if true, don't print the set of reachable states at the end of the analysis
 analysis.dontPrintReachableStates = false
@@ -76,3 +76,6 @@ cpa.useSpecializedReachedSet = true
 
 # print a warning whenever an uninitialized variable is read
 uninitVars.printWarnings = true
+
+# set parser dalect
+parser.dialect = GNUC
