Level of logging to file and to console are now independent. Adjusted configuration files to not log to a file, but log important messages (level INFO or greater) to the console. Fixed a message occurring unnecessarily in UninitializedVariables.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@790 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/pointerAnalysis.properties
+++ b/test/config/pointerAnalysis.properties
@@ -15,8 +15,8 @@ log.path = test/output/CPALog.txt
 # become quite large and memory usage might become an issue. 
 log.level = OFF
 
-# set log level of console output. levels lower than log.level are ignored
-log.consoleLevel = OFF
+# set log level of console output
+log.consoleLevel = INFO
 
 # do we want to print cfa as .dot, true or false
 dot.export = true
