--- a/test/config/symbpredabsCPA.properties
+++ b/test/config/symbpredabsCPA.properties
@@ -15,8 +15,8 @@ log.path = test/output/CPALog.txt
 # become quite large and memory usage might become an issue. 
 log.level = OFF
 
-# set log level of console output. levels lower than log.level are ignored
-log.consoleLevel = OFF
+# set log level of console output
+log.consoleLevel = INFO
 
 # do we want to print cfa as .dot, true or false
 dot.export = true
