get better error messages from CDT parser this needs ICU4J (library added, license permits redistribution)
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@792 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/.classpath
+++ b/.classpath
@@ -21,5 +21,6 @@
 	<classpathentry kind="lib" path="lib/javabdd-1.0b2.jar"/>
 	<classpathentry kind="lib" path="lib/yicesapijava.jar"/>
 	<classpathentry kind="lib" path="lib/StubCodeReaderFactory.jar"/>
+	<classpathentry kind="lib" path="lib/icu4j-4_2_1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
