--- a/build.properties
+++ b/build.properties
@@ -7,6 +7,7 @@ bin.includes = plugin.xml,\
                lib/javabdd-1.0b2.jar,\
                lib/mathsat.jar,\
                lib/StubCodeReaderFactory.jar,\
+               lib/icu4j-4_2_1.jar,\
                bin/,\
                lib/,\
                .
