-consolidated syntax of output paths in the configuration files -commandline option -nolog now disables all logging
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@797 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/benchmarks-qdpt/config/basicblock2.properties
+++ b/test/benchmarks-qdpt/config/basicblock2.properties
@@ -4,17 +4,34 @@ analysis.summaryBasedQueryDrivenProgramTesting=true
 testing.scoperestrictionautomaton=001
 testing.testgoalautomaton=003
 
-# where to save the log file
-log.path = CPALog.txt
+# where to save all output
+output.path = test/output/
 
-# set the log level, only on, off supported currently to switch on or off
-log.level = off
+# name of the output file for logging
+log.file = CPALog.txt
+
+# set log level of cpa log file. lower log levels include all higher ones.
+# possibilities in descending order: 
+# OFF: 		no logs published
+# SEVERE: 	error messages
+# WARNING: 	warnings
+# INFO: 	messages
+# FINE: 	logs on main application level
+# FINER: 	logs on central CPA algorithm level
+# FINEST: 	logs published by specific CPAs
+# ALL: 		debugging information
+# Care must be taken with levels of FINER or lower, as output files may 
+# become quite large and memory usage might become an issue. 
+log.level = OFF
+
+# set log level of console output
+log.consoleLevel = INFO
 
 # do we want to print cfa as .dot, true or false
-dot.export = true
+cfa.export = true
 
-# where to save the dot file
-dot.path = .
+# filename for cfa export
+cfa.file = cfa.dot.
 
 # do we want to simplify cfa?
 cfa.simplify = false
@@ -99,7 +116,7 @@ cpas.symbpredabs.mathsat.useIntegers = false
 cpas.symbpredabs.refinement.addWellScopedPredicates = false
 
 # where to dump the counterexample formula in case the error location is reached
-cpas.symbpredabs.refinement.msatCexPath = cex.msat
+cpas.symbpredabs.refinement.msatCexFile = cex.msat
 
 # if true, try to add some useful static-learning-like axioms for bitwise
 # operations (which are encoded as UFs): essentially, we simply collect all
@@ -116,7 +133,7 @@ cpas.symbpredabs.noAutoInitPrefix = __BLAST_NONDET
 
 # where to dump the final predicate map in case the error location is not
 # reached
-cpas.symbpredabs.refinement.finalPredMapPath = /home/holzera/cpachecker/mypredmap.txt
+cpas.symbpredabs.refinement.finalPredMapFile = predmap.txt
 
 # whether to use a Boolean or a Cartesian abstraction
 cpas.symbpredabs.abstraction.cartesian = false
