--- a/test/config/types.properties
+++ b/test/config/types.properties
@@ -1,5 +1,8 @@
-# where to save the log file
-log.path = test/output/CPALog.txt
+# where to save all output
+output.path = test/output/
+
+# name of the output file for logging
+log.file = CPALog.txt
 
 # set log level of cpa log file. lower log levels include all higher ones.
 # possibilities in descending order: 
@@ -19,10 +22,10 @@ log.level = OFF
 log.consoleLevel = INFO
 
 # do we want to print cfa as .dot, true or false
-dot.export = true
+cfa.export = true
 
-# where to save the dot file
-dot.path = test/output/
+# filename for cfa export
+cfa.file = cfa.dot
 
 parser.dialect = GNUC
 
