--- a/test/config/itpexplicit.properties
+++ b/test/config/itpexplicit.properties
@@ -1,5 +1,8 @@
-# where to save the log file
-log.path = test/output/CPALog.txt
+# where to save all output
+output.path = test/output/
+
+# name of the output file for logging
+log.file = CPALog.txt
 
 # set log level of cpa log file. lower log levels include all higher ones.
 # possibilities in descending order: 
@@ -19,10 +22,10 @@ log.level = OFF
 log.consoleLevel = INFO
 
 # do we want to print cfa as .dot, true or false
-dot.export = false
+cfa.export = false
 
-# where to save the dot file
-dot.path = test/output/
+# filename for cfa export
+cfa.file = cfa.dot
 
 # do we want to simplify cfa?
 cfa.simplify = false
@@ -89,7 +92,7 @@ cpas.symbpredabs.mathsat.useIntegers = false
 cpas.symbpredabs.refinement.addWellScopedPredicates = false
 
 # where to dump the counterexample formula in case the error location is reached
-cpas.symbpredabs.refinement.msatCexPath = cex.msat
+cpas.symbpredabs.refinement.msatCexFile = cex.msat
 
 # if true, try to add some useful static-learning-like axioms for bitwise
 # operations (which are encoded as UFs): essentially, we simply collect all
@@ -106,7 +109,7 @@ cpas.symbpredabs.noAutoInitPrefix = __BLAST_NONDET
 
 # where to dump the final predicate map in case the error location is not
 # reached
-cpas.symbpredabs.refinement.finalPredMapPath = predmap.txt
+cpas.symbpredabs.refinement.finalPredMapFile = predmap.txt
 
 # whether to use a Boolean or a Cartesian abstraction
 cpas.symbpredabs.abstraction.cartesian = false
