Added possibility of excluding levels from being logged to console of file.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@798 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/predabst.properties
+++ b/test/config/predabst.properties
@@ -19,10 +19,16 @@ log.file = CPALog.txt
 # ALL: 		debugging information
 # Care must be taken with levels of FINER or lower, as output files may 
 # become quite large and memory usage might become an issue. 
+
+# log level of file output
 log.level = OFF
 
 # set log level of console output
 log.consoleLevel = INFO
+
+# optionally, list levels to be excluded from being logged
+#log.fileExclude = FINER, INFO
+#log.consoleExclude = FINER
 
 # do we want to print cfa as .dot, true or false
 cfa.export = false
