--- a/test/config/predabst.properties
+++ b/test/config/predabst.properties
@@ -1,8 +1,5 @@
-analysis.useART = true
-analysis.useRefinement = true
-
 # where to save all output
-output.path = test/output/
+output.path = .
 
 # name of the output file for logging
 log.file = CPALog.txt
@@ -36,27 +33,37 @@ cfa.export = false
 # filename for cfa export
 cfa.file = cfa.dot
 
+# export ART as graph? (only if analysis.useART == true)
+ART.export = false
+ART.file = ART.dot
+
+parser.dialect = GNUC
+
 # do we want to simplify cfa?
 cfa.simplify = false
 
 # run consistency checks on the cfa?
 cfa.check = true
 
+# use ART CPA (needed for refinement)
+analysis.useART = true
+
+analysis.useRefinement = true
+
+# use CBMC to check counter examples (needs cbmc installed in path)
+analysis.useCBMC = false
+
+# use global variables?
+analysis.useGlobalVars = true
+
 # set to true if you want to run an interprocedural analysis
 analysis.interprocedural = true
-analysis.useGlobalVars = true
 
 # if true, don't create call/return edges for external function calls
 analysis.noExternalCalls = true
 
 # don't use a composite CPA
 analysis.noCompositeCPA = false
-
-# remove nodes that are not reachable from the error
-cfa.removeIrrelevantForErrorLocations = true
-
-# where are predicates
-#predicates.path = /home/alb/mathsat/cpachecker/project
 
 # entry function
 analysis.entryFunction = main
@@ -72,22 +79,27 @@ analysis.traversal = dfs
 # which CPAs do we want to use? where is the CPA class that represents the corresponding analysis?
 # if additional location information is necessary, locationCPA must be the first given in the list
 # e.g. analysis.cpas = cpa.location.LocationCPA, ...
-analysis.cpas = cpa.location.LocationCPA, cpa.predicateabstraction.PredicateAbstractionCPA
+analysis.cpas = cpa.location.LocationCPA, cpa.errorlocation.ErrorLocationCPA, cpa.predicateabstraction.PredicateAbstractionCPA
 
 # what merge operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
 # use sep for MergeSep and join for MergeJoin
-analysis.mergeOperators = sep, sep
+analysis.mergeOperators = sep, sep, sep
 
 # what stop operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
 # use sep for StopSep and join for StopJoin
-analysis.stopOperators = sep, sep
+analysis.stopOperators = sep, sep, sep
 
 # if true, don't print the set of reachable states at the end of the analysis
-analysis.dontPrintReachableStates = false
+analysis.dontPrintReachableStates = true
 
 # the class used for refinement
 cegar.refiner = cpa.predicateabstraction.PredicateAbstractionRefiner
 
+# if true, perform a (very) simple "cone-of-influence" reduction, to get rid
+# of all the nodes and edges that are not reachable from the error locations
+cfa.removeIrrelevantForErrorLocations = true
+
+# use location mapped reached set
 cpa.useSpecializedReachedSet = true
 
 #------------------------------------------------------------------------------
