include Google Collections Library 1.0 this is a useful expansion of the Java Collection Framework containing things like Multimaps, Multisets, Filter and Map operations, richer Iterators and Comparators and a lot of utility methods License is Apache License 2.0
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@890 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/.classpath
+++ b/.classpath
@@ -24,5 +24,6 @@
 	<classpathentry kind="lib" path="lib/yicesapijava.jar"/>
 	<classpathentry kind="lib" path="lib/StubCodeReaderFactory.jar"/>
 	<classpathentry kind="lib" path="lib/icu4j-4_2_1.jar"/>
+	<classpathentry kind="lib" path="lib/google-collect-1.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
