--- a/build.properties
+++ b/build.properties
@@ -8,6 +8,7 @@ bin.includes = plugin.xml,\
                lib/mathsat.jar,\
                lib/StubCodeReaderFactory.jar,\
                lib/icu4j-4_2_1.jar,\
+               lib/google-collect-1.0.jar,\
                bin/,\
                lib/,\
                .
