--- a/test/config/symbpredabsCPA.properties
+++ b/test/config/symbpredabsCPA.properties
@@ -171,3 +171,6 @@ cpas.symbpredabs.mathsat.dumpHardAbstractionQueries = false
 
 # if false, don't use a combination of theories (this is incomplete)
 cpas.symbpredabs.mathsat.useDtc = false
+
+# maximum blocksize before abstraction is forced (0 = LBE; 1 = SBE)
+cpas.symbpredabs.blocksize = 0
