Add option to enable/disable forced abstraction on function call/return for SymbPredAbsCPA. This basically inlines all functions. Of course this does not work with recursive functions. The option is disabled by default and in the supplied configuration file, which is the current behavior (always abstractions on function calls).
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@930 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/symbpredabsCPA.properties
+++ b/test/config/symbpredabsCPA.properties
@@ -174,3 +174,6 @@ cpas.symbpredabs.mathsat.useDtc = false
 
 # maximum blocksize before abstraction is forced (0 = LBE; 1 = SBE)
 cpas.symbpredabs.blocksize = 0
+
+# inline functions (i.e. for LBE do no abstraction on function call/return, for SBE nothing changes)
+cpas.symbpredabs.inlineFunction = false
