Changed the ObserverStates
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@963 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/observerAnalysis.properties
+++ b/test/config/observerAnalysis.properties
@@ -82,6 +82,7 @@ explicitAnalysis.threshold = 2000
 
 
 #input File for ObserverAutomatonAnalysis
+#observerAnalysis.inputFile =  test/tests/observerAutomata/LoopAutomaton.txt
 observerAnalysis.inputFile =  test/tests/observerAutomata/LockingAutomatonAstComp.txt
 #observerAnalysis.inputFile =  test/tests/observerAutomata/LockingAutomatonExactMatch.txt
 #observerAnalysis.inputFile =  test/tests/observerAutomata/LockingAutomatonRegEx.txt
