Fix build files: - add jgrapht-jdk1.6.jar to .classpath - remove JFlex.jar from .classpath (not needed because we do not link against it, otherwise CPAchecker would have to be unter the GPL) - fix filename case in src/cpa/observeranalysis/observerBuild.xml - remove build.properties file (seems to be unncessary, build with Eclipse and ant work fine without it) - add build file for fql parser and lexer (srcfql/frontend/parser/build.xml), copied from observerBuild.xml - add entry to build.xml so that the junit.jar is found - add entry to build.xml which adds all jar files in lib/ so build.xml does not need to be edited if a library is added - add entry to build.xml so that the ant tasks for creating ObserverAutomaton and FQL parser are executed before building
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@966 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/.classpath
+++ b/.classpath
@@ -8,7 +8,6 @@
 	<classpathentry exported="true" kind="lib" path="META-INF/"/>
 	<classpathentry exported="true" kind="lib" path="bin/"/>
 	<classpathentry kind="lib" path="lib/java-cup-11a.jar"/>
-	<classpathentry kind="lib" path="lib/JFlex.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="lib/native/x86-linux/"/>
@@ -25,5 +24,6 @@
 	<classpathentry kind="lib" path="lib/StubCodeReaderFactory.jar"/>
 	<classpathentry kind="lib" path="lib/icu4j-4_2_1.jar"/>
 	<classpathentry kind="lib" path="lib/google-collect-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/jgrapht-jdk1.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
