Enable assert statements while running JUnit test cases with Ant
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@970 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/build.xml
+++ b/build.xml
@@ -60,7 +60,10 @@
    <target description="Run all JUnit tests" depends="build" name="tests">
         <property name="test.report.dir" value="test/output" />
 	<mkdir dir="${test.report.dir}" />
-        <junit fork="true" printSummary="true" showOutput="false">
+	<junit fork="true" printSummary="true" showOutput="false">
+	    <assertions>
+		<enable />
+	    </assertions>
             <formatter type="plain" />
             <classpath refid="CPAchecker.classpath"/>
             <batchtest fork="true" todir="${test.report.dir}" >
