returnFromFunction() was called at an incorrect location, leading to missing initialization information for function returns.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@995 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/uninitVars.properties
+++ b/test/config/uninitVars.properties
@@ -67,7 +67,7 @@ analysis.cpas = cpa.location.LocationCPA, cpa.types.TypesCPA, cpa.uninitvars.Uni
 
 # what merge operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
 # use sep for MergeSep and join for MergeJoin
-analysis.mergeOperators = sep, join, sep
+analysis.mergeOperators = sep, join, join
 
 # what stop operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
 # use sep for StopSep and join for StopJoin
