do not print reached set to console after analysis, instead write it to a file new configuration options reachedSet.export and reachedSet.file for this remove configuration option analysis.dontPrintReachableStates
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@1044 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/mcmillan.properties
+++ b/test/config/mcmillan.properties
@@ -33,6 +33,10 @@ cfa.export = true
 # filename for cfa export
 cfa.file = cfa.dot
 
+# export reached set to text file?
+reachedSet.export = true
+reachedSet.file = reached.txt
+
 # export ART as graph? (only if analysis.useART == true)
 ART.export = true
 ART.file = ART.dot
@@ -88,9 +92,6 @@ analysis.mergeOperators = sep, sep, sep
 # what stop operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
 # use sep for StopSep and join for StopJoin
 analysis.stopOperators = sep, sep, sep
-
-# if true, don't print the set of reachable states at the end of the analysis
-analysis.dontPrintReachableStates = true
 
 # the class used for refinement
 cegar.refiner = cpa.symbpredabsCPA.McMillanRefiner
