--- a/test/config/explicitAnalysisJoin.properties
+++ b/test/config/explicitAnalysisJoin.properties
@@ -28,10 +28,14 @@ log.consoleLevel = INFO
 #log.consoleExclude = FINER
 
 # do we want to print cfa as .dot, true or false
-cfa.export = false
+cfa.export = true
 
 # filename for cfa export
 cfa.file = cfa.dot
+
+# export reached set to text file?
+reachedSet.export = true
+reachedSet.file = reached.txt
 
 # do we want to simplify cfa?
 cfa.simplify = false
@@ -67,9 +71,6 @@ analysis.mergeOperators = sep, join, ignored
 # what stop operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
 # use sep for StopSep and join for StopJoin
 analysis.stopOperators = sep, sep, ignored
-
-# if true, don't print the set of reachable states at the end of the analysis
-analysis.dontPrintReachableStates = true
 
 # if true, perform a (very) simple "cone-of-influence" reduction, to get rid
 # of all the nodes and edges that are not reachable from the error locations
