--- a/test/config/predabst.properties
+++ b/test/config/predabst.properties
@@ -28,13 +28,17 @@ log.consoleLevel = INFO
 #log.consoleExclude = FINER
 
 # do we want to print cfa as .dot, true or false
-cfa.export = false
+cfa.export = true
 
 # filename for cfa export
 cfa.file = cfa.dot
 
+# export reached set to text file?
+reachedSet.export = true
+reachedSet.file = reached.txt
+
 # export ART as graph? (only if analysis.useART == true)
-ART.export = false
+ART.export = true
 ART.file = ART.dot
 
 parser.dialect = GNUC
@@ -88,9 +92,6 @@ analysis.mergeOperators = sep, sep, sep
 # what stop operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
 # use sep for StopSep and join for StopJoin
 analysis.stopOperators = sep, sep, sep
-
-# if true, don't print the set of reachable states at the end of the analysis
-analysis.dontPrintReachableStates = true
 
 # the class used for refinement
 cegar.refiner = cpa.predicateabstraction.PredicateAbstractionRefiner
