Changed the ANT buildfiles so the generated parser classes do not trigger eclipse warnings
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@1096 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/src/fql/frontend/parser/build.xml
+++ b/src/fql/frontend/parser/build.xml
@@ -32,5 +32,9 @@
     	 nopositions="true"
     />
     <jflex file="${parserDir}/FQL.lex" destdir="${src}" />
+  	<!-- places the suppressWarnings-tag in front of the outer class -->
+  	<replace file="${parserDir}/FQLParser.java" token="public class " value="@SuppressWarnings(value = { &quot;all&quot; }) public class "/>
+  	<!-- places the suppressWarnings-tag in front of the inner class -->
+  	<replace file="${parserDir}/FQLParser.java" token="class CUP$" value="@SuppressWarnings(value = { &quot;all&quot; }) class CUP$"/>
   </target>
 </project>
