McMillan analysis should use DFS by default, not topsort
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@1105 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/mcmillan.properties
+++ b/test/config/mcmillan.properties
@@ -73,7 +73,7 @@ analysis.noCompositeCPA = true
 analysis.entryFunction = main
     
 # which strategy to adopt for visiting states? dfs, bfs, or topsort
-analysis.traversal = topsort
+analysis.traversal = dfs
 
 # where to keep the programs to run, this is the workspacedata if
 # you use eclipse to run CPAChecker. if it changes, you should change this
