Introduce CPABuilder which manages the creation of all CPAs. Some CPAs do still not have a CPAFactory, but all of the commonly used ones do have it. This changes the way CPAs are specified in the configuration file: - the options analysis.cpas, analysis.noCompositeCPA, analysis.mergeOperators and analysis.stopOperators are no longer used - the root CPA is specified with the CPA option - the CPAs wrapped by a CPA are specified with WrapperCPA.cpa / WrapperCPA.cpas - the merge and stop operators are specified with options specific to each CPA
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@1122 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/concreteAnalysis.properties
+++ b/test/config/concreteAnalysis.properties
@@ -50,28 +50,17 @@ analysis.useGlobalVars = true
 # if true, don't create call/return edges for external function calls
 analysis.noExternalCalls = true
 
-# don't use a composite CPA
-analysis.noCompositeCPA = false
-
 # entry function
 analysis.entryFunction = main
     
 # which strategy to adopt for visiting states? dfs, bfs, or topsort
 analysis.traversal = topsort
 
-# which CPAs do we want to use? where is the CPA class that represents the corresponding analysis?
-# if additional location information is necessary, locationCPA must be the first given in the list
-# e.g. analysis.cpas = cpa.location.LocationCPA, ...
+# which CPA do we want to use? 
+cpa = compositeCPA.CompositeCPA
+ 
+# which CPAs should be contained in the CompositeCPA?
 analysis.cpas = cpa.location.LocationCPA, cpa.concrete.ConcreteAnalysisCPA
-#, cpa.errorlocation.ErrorLocationCPA
-
-# what merge operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
-# use sep for MergeSep and join for MergeJoin
-analysis.mergeOperators = sep, sep, ignored
-
-# what stop operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
-# use sep for StopSep and join for StopJoin
-analysis.stopOperators = sep, sep, ignored
 
 # if true, perform a (very) simple "cone-of-influence" reduction, to get rid
 # of all the nodes and edges that are not reachable from the error locations
