--- a/test/config/predabst.properties
+++ b/test/config/predabst.properties
@@ -37,7 +37,7 @@ cfa.file = cfa.dot
 reachedSet.export = true
 reachedSet.file = reached.txt
 
-# export ART as graph? (only if analysis.useART == true)
+# export ART as graph? (only if ARTCPA is used)
 ART.export = true
 ART.file = ART.dot
 
@@ -48,9 +48,6 @@ cfa.simplify = false
 
 # run consistency checks on the cfa?
 cfa.check = true
-
-# use ART CPA (needed for refinement)
-analysis.useART = true
 
 analysis.useRefinement = true
 
@@ -66,9 +63,6 @@ analysis.interprocedural = true
 # if true, don't create call/return edges for external function calls
 analysis.noExternalCalls = true
 
-# don't use a composite CPA
-analysis.noCompositeCPA = false
-
 # entry function
 analysis.entryFunction = main
     
@@ -80,18 +74,17 @@ analysis.traversal = dfs
 # parameter.
 #analysis.programs = test/
 
-# which CPAs do we want to use? where is the CPA class that represents the corresponding analysis?
-# if additional location information is necessary, locationCPA must be the first given in the list
-# e.g. analysis.cpas = cpa.location.LocationCPA, ...
-analysis.cpas = cpa.location.LocationCPA, cpa.errorlocation.ErrorLocationCPA, cpa.predicateabstraction.PredicateAbstractionCPA
+# which CPA do we want to use? (ARTCPA is needed for refinement)
+cpa = cpa.art.ARTCPA
 
-# what merge operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
-# use sep for MergeSep and join for MergeJoin
-analysis.mergeOperators = sep, sep, sep
+# which CPA should be by the ARTCPA? 
+ARTCPA.cpa = compositeCPA.CompositeCPA
 
-# what stop operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
-# use sep for StopSep and join for StopJoin
-analysis.stopOperators = sep, sep, sep
+# which CPAs should be contained in the CompositeCPA?
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.errorlocation.ErrorLocationCPA, cpa.predicateabstraction.PredicateAbstractionCPA
+
+# which merge operator to use for ARTCPA? only use sep here if all other CPAs also use sep
+cpas.art.merge = sep
 
 # the class used for refinement
 cegar.refiner = cpa.predicateabstraction.PredicateAbstractionRefiner
