--- a/test/config/types.properties
+++ b/test/config/types.properties
@@ -55,9 +55,6 @@ analysis.useFunctionDeclarations = true
 # if true, don't create call/return edges for external function calls
 analysis.noExternalCalls = false
 
-# don't use a composite CPA
-analysis.noCompositeCPA = false
-
 # entry function
 analysis.entryFunction = main
     
@@ -69,18 +66,11 @@ analysis.traversal = dfs
 # parameter.
 #analysis.programs = tests/
 
-# which CPAs do we want to use? where is the CPA class that represents the corresponding analysis?
-# if additional location information is necessary, locationCPA must be the first given in the list
-# e.g. analysis.cpas = cpa.location.LocationCPA, ...
-analysis.cpas = cpa.location.LocationCPA, cpa.types.TypesCPA
-
-# what merge operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
-# use sep for MergeSep and join for MergeJoin
-analysis.mergeOperators = sep, join
-
-# what stop operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
-# use sep for StopSep and join for StopJoin
-analysis.stopOperators = sep, sep
+# which CPA do we want to use? 
+cpa = compositeCPA.CompositeCPA
+ 
+# which CPAs should be contained in the CompositeCPA?
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.types.TypesCPA
 
 # if true, perform a (very) simple "cone-of-influence" reduction, to get rid
 # of all the nodes and edges that are not reachable from the error locations
