--- a/test/config/observerAnalysis.properties
+++ b/test/config/observerAnalysis.properties
@@ -50,27 +50,17 @@ analysis.useGlobalVars = true
 # if true, don't create call/return edges for external function calls
 analysis.noExternalCalls = true
 
-# don't use a composite CPA
-analysis.noCompositeCPA = false
-
 # entry function
 analysis.entryFunction = main
     
 # which strategy to adopt for visiting states? dfs, bfs, or topsort
 analysis.traversal = topsort
 
-# which CPAs do we want to use? where is the CPA class that represents the corresponding analysis?
-# if additional location information is necessary, locationCPA must be the first given in the list
-# e.g. analysis.cpas = cpa.location.LocationCPA, ...
-analysis.cpas = cpa.location.LocationCPA, cpa.observeranalysis.ObserverAutomatonCPA
-
-# what merge operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
-# use sep for MergeSep and join for MergeJoin
-analysis.mergeOperators = sep, sep, sep
-
-# what stop operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
-# use sep for StopSep and join for StopJoin
-analysis.stopOperators = sep, sep, sep
+# which CPA do we want to use? 
+cpa = compositeCPA.CompositeCPA
+ 
+# which CPAs should be contained in the CompositeCPA?
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.observeranalysis.ObserverAutomatonCPA
 
 # if true, perform a (very) simple "cone-of-influence" reduction, to get rid
 # of all the nodes and edges that are not reachable from the error locations
@@ -78,9 +68,6 @@ cfa.removeIrrelevantForErrorLocations = true
 
 # use location mapped reached set
 cpa.useSpecializedReachedSet = true
-
-explicitAnalysis.threshold = 2000
-
 
 #input File for ObserverAutomatonAnalysis
 #observerAnalysis.inputFile =  test/programs/observerAutomata/LoopAutomaton.txt
