--- a/test/config/simpleMustMayAnalysis.properties
+++ b/test/config/simpleMustMayAnalysis.properties
@@ -44,14 +44,11 @@ cfa.simplify = false
 cfa.check = true
 
 
-# export ART as graph? (only if analysis.useART == true)
+# export ART as graph? (only if ARTCPA is used)
 ART.export = true
 ART.file = ART.dot
 
-# use ART CPA (needed for refinement)
-analysis.useART = true
 analysis.useRefinement = false
-
 
 # set to true if you want to run an interprocedural analysis
 analysis.interprocedural = true
@@ -60,28 +57,23 @@ analysis.useGlobalVars = true
 # if true, don't create call/return edges for external function calls
 analysis.noExternalCalls = true
 
-# don't use a composite CPA
-analysis.noCompositeCPA = false
-
 # entry function
 analysis.entryFunction = main
     
 # which strategy to adopt for visiting states? dfs, bfs, or topsort
 analysis.traversal = topsort
 
-# which CPAs do we want to use? where is the CPA class that represents the corresponding analysis?
-# if additional location information is necessary, locationCPA must be the first given in the list
-# e.g. analysis.cpas = cpa.location.LocationCPA, ...
-analysis.cpas = cpa.location.LocationCPA, cpa.mustmay.SimpleMustMayAnalysisCPA
-#, cpa.errorlocation.ErrorLocationCPA
+# which CPA do we want to use? (ARTCPA is needed for refinement)
+cpa = cpa.art.ARTCPA
 
-# what merge operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
-# use sep for MergeSep and join for MergeJoin
-analysis.mergeOperators = sep, sep, ignored
+# which CPA should be by the ARTCPA? 
+ARTCPA.cpa = compositeCPA.CompositeCPA
 
-# what stop operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
-# use sep for StopSep and join for StopJoin
-analysis.stopOperators = sep, sep, ignored
+# which CPAs should be contained in the CompositeCPA?
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.mustmay.SimpleMustMayAnalysisCPA
+
+# which merge operator to use for ARTCPA? only use sep here if all other CPAs also use sep
+cpas.art.merge = join
 
 # if true, perform a (very) simple "cone-of-influence" reduction, to get rid
 # of all the nodes and edges that are not reachable from the error locations
