--- a/test/config/uninitVars.properties
+++ b/test/config/uninitVars.properties
@@ -50,9 +50,6 @@ analysis.useGlobalVars = true
 # if true, don't create call/return edges for external function calls
 analysis.noExternalCalls = true
 
-# don't use a composite CPA
-analysis.noCompositeCPA = false
-
 # entry function
 analysis.entryFunction = main
     
@@ -64,18 +61,17 @@ analysis.traversal = dfs
 # parameter.
 #analysis.programs = tests/
 
-# which CPAs do we want to use? where is the CPA class that represents the corresponding analysis?
-# if additional location information is necessary, locationCPA must be the first given in the list
-# e.g. analysis.cpas = cpa.location.LocationCPA, ...
-analysis.cpas = cpa.location.LocationCPA, cpa.types.TypesCPA, cpa.uninitvars.UninitializedVariablesCPA
+# which CPA do we want to use? 
+cpa = compositeCPA.CompositeCPA
+ 
+# which CPAs should be contained in the CompositeCPA?
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.types.TypesCPA, cpa.uninitvars.UninitializedVariablesCPA
 
-# what merge operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
-# use sep for MergeSep and join for MergeJoin
-analysis.mergeOperators = sep, join, join
+# what merge operator do we want to use for uninitvars cpa?
+uninitVars.merge = join
 
-# what stop operator do we want to use for each cpa? give the merge types in respective order with analysis.cpas property
-# use sep for StopSep and join for StopJoin
-analysis.stopOperators = sep, sep, sep
+# what stop operator do we want to use for uninitvars cpa?
+uninitVars.stop = sep
 
 # if true, perform a (very) simple "cone-of-influence" reduction, to get rid
 # of all the nodes and edges that are not reachable from the error locations
