PointerAnalysis normally needs GNUC compatible parser because of the import of malloc
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@1130 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/config/pointerAnalysis.properties
+++ b/test/config/pointerAnalysis.properties
@@ -56,6 +56,8 @@ analysis.entryFunction = main
 # which strategy to adopt for visiting states? dfs, bfs, or topsort
 analysis.traversal = dfs
 
+parser.dialect = GNUC
+
 # where to keep the programs to run, this is the workspacedata if
 # you use eclipse to run CPAChecker. if it changes, you should change this
 # parameter.
